[project]
name = "network-security-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2025.7.14",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pymongo>=4.13.2",
    "scikit-learn>=1.7.1",
    "setuptools>=80.9.0",
]
