[project]
name = "NetworkSecurity"
version = "0.0.1"
description = "Phishing URL detection system"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name="Yash Masane", email="masaneyash6@gmail.com" }
]

dependencies = [
    "certifi>=2025.7.14",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pymongo>=4.13.2",
    "scikit-learn>=1.7.1",
    "setuptools>=80.9.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
